[project]
name = "users"
version = "0.1.0"
description = "Users service"
authors = [
    {name = "toraltai",email = "flangkg@gmail.com"}
]
packages = [{ include = "users" }]
license = {text = "MIT"}
requires-python = "3.10.12"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "tortoise-orm (>=0.25.1,<0.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
users = "users.main:main"